[tool.poetry]
name = "otus_aibulat"
version = "0.1.0"
description = ""
authors = ["aibulat <aibulat.ryic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
faker = "^22.0.0"
mypy = "^1.8.0"

[[tool.mypy.overrides]]
module = "otus_aibulat"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
